--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,7 +299,7 @@ font-size: 20px;
   color: #fff;
 }
 .approach img{
-  margin-left:40px;
+  margin-left:60px;
   margin-top:0%;
   width:1200px;
 }
